# shadow-stories

./: .env.example  .gitignore  README.md  main.py  models  pyproject.toml  requirements.txt
shadow_stories/: __init__.py  live_stream_test.py  narrate.py
shadow_stories/cli/: __init__.py  __main__.py
shadow_stories/gemini/: __init__.py  client.py
shadow_stories/tts/: __init__.py  audio_engine.py  elevenlabs_ws.py  sfx.py
tests/: test_narrate.py
tests/fixtures/: sample_replay.json  scripted_session.json
